# soccerway-parser

./: .gitignore  AGENTS.md  CLAUDE.md  example.json  h2h.json  main.py  pyproject.toml
tests/: test_h2h_fetch.py  test_h2h_stats.py
