[project]
name = "soccerway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.67.1",
    "pyinstaller>=6.15.0",
    "pytest>=8.4.2",
    "asyncio>=4.0.0",
    "aiohttp>=3.12.15",
]
